Add Anonymous view. Add Faculty `edit` and `delete` features